* Replacing StringBuilder with StringBuffer  * Removes the ProcessBuilder